implement pub-key and transactions routes
