# docs/swagger.json
@@ -102,7 +102,10 @@
                 "summary": "Get balance",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.WalletDto"
+                        }
                     }
                 }
             }
@@ -196,6 +199,14 @@
             "type": "object",
             "properties": {
                 "chain": {
+                    "type": "string"
+                }
+            }
+        },
+        "app.WalletDto": {
+            "type": "object",
+            "properties": {
+                "address": {
                     "type": "string"
                 }
             }
